syntax = "proto3";

option csharp_namespace = "ZeafloServer.Proto.Users";

import "Users/Models.proto";

service UsersApi {
  rpc GetByIds(GetUsersByIdsRequest) returns (GetUsersByIdsResult);
}
